# python-ts3

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  setup.cfg  setup.py  ts3.py
examples/: automover.py  gents3privkey.py
ts3/: __init__.py  defines.py  protocol.py  server.py  test.py
