[metadata]
name = python-ts3
version = 0.1
author = Andrew Williams
author_email = andy@tensixtyone.com
summary = Teamspeak 3 Server Query library for Python
home_page = https://github.com/nikdoof/python-ts3/
description = python-ts3 is a abstraction library around the Teamspeak 3 ServerQuery API. It
    allows native access to the ServerQuery API with most of the formatting
    headaches avoided.
classifier = Development Status :: 3 - Alpha
    Natural Language :: English
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License

[files]
packages = ts3
scripts = examples/gents3privkey.py
extra_files = examples/*
    setup.py
    README.rst

[test]
suite = ts3.test.suite
